# block42_backend

./: README.md  main.py  pyproject.toml  reset_db.py
alembic/: env.py
alembic/versions/: 725f279c1198_add_metadata_column_to_levels.py  8f2a3b1c4d5e_add_level_progress_table.py  9c2b7f1e3a4d_add_level_programs_table.py  c68b56b73631_initial_schema_with_user_and_refactored_.py  edd9299372a6_initial_schema.py
app/: config.py  database.py  main.py
app/api/v1/: admin.py  auth.py  designer.py  levels.py
app/core/: deps.py  security.py
app/models/: __init__.py  level.py  program.py  progress.py  user.py
app/schemas/: __init__.py  admin.py  level.py  program.py  progress.py  user.py
app/services/: __init__.py  level_service.py  moderation_service.py  publish_service.py
scripts/: create-superuser.py  create_admin.py  test_login.py  test_password_fix.py
